# mathandprogramming

./: README.md  main.py  pyproject.toml
notebooks/: 0intro.ipynb  Chapter1.ipynb  Chapter6.ipynb  Chapter8.exercises.ipynb  stable_marrige.ipynb
